--- a/templates/prints.html
+++ b/templates/prints.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <!-- ART PRINTS -->
-<div class="col-12 blog-print-posts-area">
+<div class="col-12 art-prints-area">
     <div class="row print-display">
         {% for print in artprint_list %}
         <div class="col-sm-6 col-md-4 col-lg-3">
