--- a/templates/prints.html
+++ b/templates/prints.html
@@ -5,6 +5,22 @@
 <!-- ART PRINTS -->
 <div class="col-12 art-prints-area">
     <div class="row print-display">
+        <!-- NEW PRINT SUBMISSION FIELD -->
+        {% if user.is_authenticated %}
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card mb-4">
+                <div class="card-body all-prints-cards">
+                    <h2>TEST<h2></h2>
+                    <hr />
+                    <p>just click the button</p>
+                </div>
+            </div>
+        </div>
+        {% else %}
+        <div></div>
+        {% endif %}
+
+        <!-- APPROVED PRINT SUBMISSIONS -->
         {% for print in artprint_list %}
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-4">
