Add button to navigate to submission page.

--- a/templates/prints.html
+++ b/templates/prints.html
@@ -13,6 +13,9 @@
                     <h2>TEST<h2></h2>
                     <hr />
                     <p>just click the button</p>
+                    <a href="{% url 'submit-print' %}">
+                        <button class="submit-print-button">SUBMIT PRINT</button>
+                    </a>
                 </div>
             </div>
         </div>
