--- a/static/css/style.css
+++ b/static/css/style.css
@@ -310,7 +310,8 @@ h3 {
 /* SITE BUTTONS: */
 .login-register-button,
 .pagination-button,
-.submit-comment-button {
+.submit-comment-button,
+.submit-print-button {
     background: #1A313C;
     border-radius: 4px;
     border: none;
@@ -323,7 +324,6 @@ h3 {
 .next-prev-button {
     justify-content: center;
 }
-
 
 /* @media screen and (min-width:1600px){}
 
