--- a/templates/prints.html
+++ b/templates/prints.html
@@ -10,17 +10,16 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-4">
                 <div class="card-body all-prints-cards">
-                    <h2>TEST<h2></h2>
+                    <h2>Submit your print:<h2></h2>
                     <hr />
                     <p>just click the button</p>
-                    <a href="{% url 'submit-print' %}">
+                    <br>
+                    <a href="{% url 'submit_print' %}">
                         <button class="submit-print-button">SUBMIT PRINT</button>
                     </a>
                 </div>
             </div>
         </div>
-        {% else %}
-        <div></div>
         {% endif %}
 
         <!-- APPROVED PRINT SUBMISSIONS -->
