--- a/templates/submit-print.html
+++ b/templates/submit-print.html
@@ -6,4 +6,22 @@
 
 <h1>WHAT?!</h1>
 
+<!-- NEW PRINT SUBMISSION FIELD -->
+{% if user.is_authenticated %}
+<div class="col-sm-6 col-md-4 col-lg-3">
+    <div class="card mb-4">
+        <div class="card-body all-prints-cards">
+            <h2>Submit your print:<h2></h2>
+            <hr />
+            <p>just click the button</p>
+            <form method="POST"  action="add" style="margin-top: 1.3em;">
+                {{ submission_form | crispy }}
+                {% csrf_token %}
+            </form>
+            <button type="submit" class="submit-print-button">Submit</button>
+        </div>
+    </div>
+</div>
+{% endif %}
+
 {%endblock%}
