Create html template for edit print page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -172,6 +172,11 @@ h3 {
     margin: 3px 0;
 }
 
+/* PRINT SUBMISSION PAGE/FORM */
+.submission-form {
+    justify-content: center;
+}
+
 .single-print-card {
     line-height: 40px;
 }
