Style 'new submission' field.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -172,6 +172,12 @@ h3 {
     margin: 3px 0;
 }
 
+/* NEW SUBMISSION BOX */
+.new-submission {
+    justify-content: center;
+    text-align: center;
+}
+
 /* PRINT SUBMISSION PAGE/FORM */
 .submission-form {
     justify-content: center;
