Replace Home & About page images with smaller files.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 <!-- <div class="hero-page"></div> -->
 <div class="hero-page">
-    <img src="{% static 'images/gallery-wall.jpg' %}" alt="gallery wall">
+    <img src="{% static 'images/gallery-wall-small.jpg' %}" alt="gallery wall">
 </div>
 
 {% endblock %}
