remove commented out lines from html files.

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,13 +12,13 @@
         <div class="col-md-4">
             <h2>About :</h2>
             <p>Welcome to print(<span id="statement-green">STATEMENTS</span>) where our sole purpose in this world is to create art enthusiasts to the
-                artists they love, the artists they don’t-yet-know, and the unique, limited edition prints available
+                artists they love, the artists they don't-yet-know, and the unique, limited edition prints available
                 only here!</p>
             <p>Print statements works directly with our artists, giving them a platform to show-off their creativity &
                 hard work, and making those works available as limited edition prints.</p>
-            <p>If you want to see what’s new & happening, head over to our <a href="{% url 'blog' %}">blog</a> for all
+            <p>If you want to see what's new & happening, head over to our <a href="{% url 'blog' %}">blog</a> for all
                 the latest updates.</p>
-            <p>And if you’re ready to have your socks knocked off, check out the prints that are currently available <a
+            <p>And if you're ready to have your socks knocked off, check out the prints that are currently available <a
                     href="{% url 'prints' %}">here</a>.</p>
         </div>
     </div>
